# ai-applications-in-industry

./: .gitignore  pyproject.toml
computer-vision/: 1_Deteccion_Calidad_Limones_MobileNetV2.ipynb  2_Actividad_EfficientNetB0_Calidad_Limones.ipynb  pyproject.toml
scoring-fraud-detection/: 1_Crédito Hipotecario -Variables con LLM_Ed2.ipynb  2_Actividad Detección de fraude - Variables LLM.ipynb  pyproject.toml
