[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=6.1.0",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.15.0,<2.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
