[project]
name = "scoring-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "google-generativeai",
    "langchain>=1.3.14",
    "langchain-huggingface>=1.2.2",
    "lightgbm>=4.7.0",
    "scikit-learn>=1.9.0",
    "transformers>=5.14.1",
]
